# LearningOpenGL

./: CMakeLists.txt
OpenGLtest/: CMakeLists.txt  OpenGLtest.cpp  OpenGLtest.h  Shader.cpp  Shader.h  qrc.qrc  shader_fs.glsl  shader_fs3.glsl  shader_vs.glsl  shader_vs2.glsl  shader_vs3.glsl
OpenGLtest/include/glad/: glad.h
OpenGLtest/src/: glad.c
